@@ -36,7 +36,7 @@ class ArticleRepositoryTest {
             log.info("articleId = {}", article.getArticleId());
         }
 
-        Long lastArticleId = articles.get(articles.size() - 1).getArticleId();
+        Long lastArticleId = articles.getLast().getArticleId();
         List<Article> articles2 = articleRepository.findAllInfiniteScroll(1L, 30L, lastArticleId);
         for (Article article : articles2) {
             log.info("articleId = {}", article.getArticleId());
